Add JVM garbage collector benchmark suite
Adds dedicated GC-sensitive benchmarks to measure impact of different
JVM garbage collectors on JRuby 10 performance. Key finding: Shenandoah
is 3.7x faster than G1 (default) on average, with Hash#keys showing
up to 20x improvement.

New files:
- benchmarks/gc_benchmarks.rb: GC-sensitive benchmark module
- run_gc_benchmarks.rb: Benchmark runner with GC auto-detection
- run_gc_comparison.sh: Run benchmarks with G1, Parallel, ZGC, Shenandoah
- compare_gc.rb: Generate comparison report from JSON results

Recommendation: Use -J-XX:+UseShenandoahGC for JRuby 10 workloads
with large data structures.